--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
 		"python",
 		"telethon"
 	],
-	"repository": "https://github.com/Source-Ze/Temp-Mail",
+	"repository": "https://github.com/afrotoo66/session3",
     "env": {
         "TG_BOT_TOKEN": {
             "description": "Your Telegram Bot Token from @BotFather",
